--- a/notebooks/raster_practice.ipynb
+++ b/notebooks/raster_practice.ipynb
@@ -2,50 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "\n",
-       "            <style>\n",
-       "                .geemap-dark {\n",
-       "                    --jp-widgets-color: white;\n",
-       "                    --jp-widgets-label-color: white;\n",
-       "                    --jp-ui-font-color1: white;\n",
-       "                    --jp-layout-color2: #454545;\n",
-       "                    background-color: #383838;\n",
-       "                }\n",
-       "\n",
-       "                .geemap-dark .jupyter-button {\n",
-       "                    --jp-layout-color3: #383838;\n",
-       "                }\n",
-       "\n",
-       "                .geemap-colab {\n",
-       "                    background-color: var(--colab-primary-surface-color, white);\n",
-       "                }\n",
-       "\n",
-       "                .geemap-colab .jupyter-button {\n",
-       "                    --jp-layout-color3: var(--colab-primary-surface-color, white);\n",
-       "                }\n",
-       "            </style>\n",
-       "            "
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "###################################\n",
     "#GEE to analysis practice: Eliburn#\n",
     "#Maintainer: Christopher Chan     #\n",
     "#Date: 2024-06-03                 #\n",
-    "#Version: 0.0.1                   #\n",
+    "#Version: 0.0.s                   #\n",
     "###################################\n",
     "\n",
     "import io\n",
@@ -71,7 +36,6 @@
     "from googleapiclient.errors import HttpError\n",
     "from googleapiclient.http import MediaIoBaseDownload\n",
     "\n",
-    "\n",
     "ee.Authenticate()\n",
     "ee.Initialize()\n",
     "\n",
@@ -82,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -151,19 +115,45 @@
     "output = \"Eliburn_median.tif\"\n",
     "image = filteredCollection.median()\n",
     "\n",
-    "def clip(image):\n",
+    "def clip_AOI(image):\n",
     "  return image.clip(AOI)\n",
     "\n",
-    "clippedCollection = filteredCollection.map(clip)\n",
-    "clipped_median = clippedCollection.median()\n",
+    "# Cloud mask\n",
+    "def mask_s2_clouds(image):\n",
+    "  \"\"\"Masks clouds in a Sentinel-2 image using the QA band.\n",
     "\n",
-    "AOI_centre = AOI.centroid().coordinates().getInfo()\n",
+    "  Args:\n",
+    "      image (ee.Image): A Sentinel-2 image.\n",
+    "\n",
+    "  Returns:\n",
+    "      ee.Image: A cloud-masked Sentinel-2 image.\n",
+    "  \"\"\"\n",
+    "  qa = image.select('QA60')\n",
+    "\n",
+    "  # Bits 10 and 11 are clouds and cirrus, respectively.\n",
+    "  cloud_bit_mask = 1 << 10\n",
+    "  cirrus_bit_mask = 1 << 11\n",
+    "\n",
+    "  # Both flags should be set to zero, indicating clear conditions.\n",
+    "  mask = (\n",
+    "      qa.bitwiseAnd(cloud_bit_mask)\n",
+    "      .eq(0)\n",
+    "      .And(qa.bitwiseAnd(cirrus_bit_mask).eq(0))\n",
+    "  )\n",
+    "\n",
+    "  return image.updateMask(mask).divide(10000)\n",
     "\n",
     "vis = {\n",
     "    'min': 0.0,\n",
-    "    'max': 3000,\n",
+    "    'max': 0.3,\n",
     "    'bands': ['B4', 'B3', 'B2'],\n",
     "}\n",
+    "\n",
+    "clippedCollection = filteredCollection.map(clip_AOI)\n",
+    "clipmaskCollection = clippedCollection.map(mask_s2_clouds)\n",
+    "clipmask_median = clipmaskCollection.median()\n",
+    "\n",
+    "AOI_centre = AOI.centroid().coordinates().getInfo()\n",
     "\n",
     "# Create raster folder in 01_raw if not exist\n",
     "if not os.path.exists(pathlib.Path(f\"{data_path}/01_raw/raster\")):\n",
@@ -176,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -216,16 +206,19 @@
    ],
    "source": [
     "# Download to google drive\n",
-    "nimg = clippedCollection.toList(clippedCollection.size().getInfo()).size().getInfo()     \n",
+    "nimg = clipmaskCollection.toList(clipmaskCollection.size().getInfo()).size().getInfo()     \n",
     "\n",
     "for i in range(nimg):\n",
     "    img = ee.Image(clippedCollection.toList(nimg).get(i))\n",
-    "    date = img.date().format('yyyy-MM-dd').getInfo()\n",
+    "    reproj_img = img.reproject(crs=\"EPSG:4277\", scale=10)\n",
+    "    date = reproj_img.date().format('yyyy-MM-dd').getInfo()\n",
     "\n",
-    "    task = ee.batch.Export.image.toDrive(img.toFloat(), \n",
-    "                                          description=date,\n",
+    "    task = ee.batch.Export.image.toDrive(reproj_img.toFloat(), \n",
+    "                                          #description=date,\n",
     "                                          folder=f'L1C_Eliburn_{todaydt}',\n",
     "                                          fileNamePrefix= f\"LIC_Eliburn_{date}\",\n",
+    "                                          crs='EPSG:4277',\n",
+    "                                          #crsTransform=projection['']\n",
     "                                          region = AOI,\n",
     "                                          dimensions = (256,256), \n",
     "                                          # fileFormat = 'TFRecord',\n",
@@ -235,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +268,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "006d4822abb548d883ac596c64a3661e",
+       "model_id": "740baec705b8409b92953d2c512b620f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -283,7 +276,7 @@
        "Map(center=[55.894552363344935, -3.5559986968427935], controls=(WidgetControl(options=['position', 'transparen…"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,13 +284,14 @@
    "source": [
     "Map = geemap.Map()\n",
     "Map.setCenter(AOI_centre[0], AOI_centre[1], 15)\n",
-    "Map.addLayer(clipped_median, vis, \"S2: L1C median\")\n",
+    "Map.addLayer(clipmask_median, vis, \"S2: L1C median\")\n",
+    "\n",
     "Map"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +332,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "An error occurred: <HttpError 403 when requesting https://www.googleapis.com/drive/v3/files/1DAfkiEyYoqQy3hjk_IqaLYJSDf9Gdn-p?alt=media returned \"Request had insufficient authentication scopes.\". Details: \"[{'message': 'Insufficient Permission', 'domain': 'global', 'reason': 'insufficientPermissions'}]\">\n"
+      "An error occurred: <HttpError 403 when requesting https://www.googleapis.com/drive/v3/files/%2F1Qb69M8nL1o-EcZijkhZBev_v8_Fam4-6?alt=media returned \"Request had insufficient authentication scopes.\". Details: \"[{'message': 'Insufficient Permission', 'domain': 'global', 'reason': 'insufficientPermissions'}]\">\n"
      ]
     },
     {
@@ -348,8 +342,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[15], line 35\u001b[0m\n\u001b[1;32m     31\u001b[0m     file \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m  \n\u001b[1;32m     33\u001b[0m   \u001b[38;5;28;01mreturn\u001b[39;00m file\u001b[38;5;241m.\u001b[39mgetvalue()\n\u001b[0;32m---> 35\u001b[0m \u001b[43mdownload_file\u001b[49m\u001b[43m(\u001b[49m\u001b[43mreal_file_id\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mEnter the folder ID from google drive: \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[15], line 33\u001b[0m, in \u001b[0;36mdownload_file\u001b[0;34m(real_file_id)\u001b[0m\n\u001b[1;32m     30\u001b[0m   \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAn error occurred: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00merror\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     31\u001b[0m   file \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m  \n\u001b[0;32m---> 33\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfile\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetvalue\u001b[49m()\n",
+      "Cell \u001b[0;32mIn[13], line 35\u001b[0m\n\u001b[1;32m     31\u001b[0m     file \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m \n\u001b[1;32m     33\u001b[0m   \u001b[38;5;28;01mreturn\u001b[39;00m file\u001b[38;5;241m.\u001b[39mgetvalue()\n\u001b[0;32m---> 35\u001b[0m \u001b[43mdownload_file\u001b[49m\u001b[43m(\u001b[49m\u001b[43mreal_file_id\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43minput\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mEnter the folder ID from google drive: \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[13], line 33\u001b[0m, in \u001b[0;36mdownload_file\u001b[0;34m(real_file_id)\u001b[0m\n\u001b[1;32m     30\u001b[0m   \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAn error occurred: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00merror\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     31\u001b[0m   file \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m \n\u001b[0;32m---> 33\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfile\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetvalue\u001b[49m()\n",
       "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'getvalue'"
      ]
     }
@@ -385,7 +379,7 @@
     "\n",
     "  except HttpError as error:\n",
     "    print(f\"An error occurred: {error}\")\n",
-    "    file = None  \n",
+    "    file = None \n",
     "\n",
     "  return file.getvalue()\n",
     "\n",
