feat(v0.0.3): batch export geemaps failed, sen2cor and snap failure
Tried both geemaps batch and loop export, does not retain all the images, resort to ee.export in loop. mask_s2_cloud cannot be applied without ommiting start:date meta info. Resorting to downloading L2A product for analysis.

--- a/notebooks/raster_practice.ipynb
+++ b/notebooks/raster_practice.ipynb
@@ -9,8 +9,8 @@
     "###################################\n",
     "#GEE to analysis practice: Eliburn#\n",
     "#Maintainer: Christopher Chan     #\n",
-    "#Date: 2024-06-03                 #\n",
-    "#Version: 0.0.s                   #\n",
+    "#Date: 2024-06-04                 #\n",
+    "#Version: 0.0.3                   #\n",
     "###################################\n",
     "\n",
     "import io\n",
@@ -38,6 +38,7 @@
     "\n",
     "ee.Authenticate()\n",
     "ee.Initialize()\n",
+    "geemap.ee_initialize()\n",
     "\n",
     "# set paths\n",
     "data_path = pathlib.Path(\"../data\")\n",
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +94,7 @@
    ],
    "source": [
     "# Image request specifications\n",
-    "S2_coll = ee.ImageCollection('COPERNICUS/S2_HARMONIZED')\n",
+    "S2_coll = ee.ImageCollection('COPERNICUS/S2_SR_HARMONIZED')\n",
     "\n",
     "AOI = ee.Geometry.Polygon([\n",
     "  [-3.5623692655567663,55.89846606313462],\n",
@@ -107,18 +108,7 @@
     "todaydt = str(dt.today())\n",
     "enddate = str(dt.today().date())\n",
     "\n",
-    "filteredCollection = (ee.ImageCollection(\"COPERNICUS/S2_HARMONIZED\")\n",
-    "  .filterBounds(AOI)\n",
-    "  .filterDate(startdate, enddate)\n",
-    "  .filter(ee.Filter.lt('CLOUDY_PIXEL_PERCENTAGE', 20)))\n",
-    "\n",
-    "output = \"Eliburn_median.tif\"\n",
-    "image = filteredCollection.median()\n",
-    "\n",
-    "def clip_AOI(image):\n",
-    "  return image.clip(AOI)\n",
-    "\n",
-    "# Cloud mask\n",
+    "# Cloud mask (OMITS date:start timestamp, obsolete from Feb 2022?)\n",
     "def mask_s2_clouds(image):\n",
     "  \"\"\"Masks clouds in a Sentinel-2 image using the QA band.\n",
     "\n",
@@ -149,8 +139,17 @@
     "    'bands': ['B4', 'B3', 'B2'],\n",
     "}\n",
     "\n",
-    "clippedCollection = filteredCollection.map(clip_AOI)\n",
-    "clipmaskCollection = clippedCollection.map(mask_s2_clouds)\n",
+    "filteredCollection = (ee.ImageCollection(\"COPERNICUS/S2_HARMONIZED\")\n",
+    "  .filterBounds(AOI)\n",
+    "  .filterDate(startdate, enddate)\n",
+    "  .filter(ee.Filter.lt('CLOUDY_PIXEL_PERCENTAGE', 20))\n",
+    "  #.map(mask_s2_clouds)\n",
+    "  )\n",
+    "\n",
+    "def clip_AOI(image):\n",
+    "  return image.clip(AOI)\n",
+    "\n",
+    "clipmaskCollection = filteredCollection.map(clip_AOI)\n",
     "clipmask_median = clipmaskCollection.median()\n",
     "\n",
     "AOI_centre = AOI.centroid().coordinates().getInfo()\n",
@@ -166,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -206,29 +205,27 @@
    ],
    "source": [
     "# Download to google drive\n",
-    "nimg = clipmaskCollection.toList(clipmaskCollection.size().getInfo()).size().getInfo()     \n",
+    "nimg = clipmaskCollection.toList(clipmaskCollection.size().getInfo()).size().getInfo()\n",
     "\n",
     "for i in range(nimg):\n",
-    "    img = ee.Image(clippedCollection.toList(nimg).get(i))\n",
-    "    reproj_img = img.reproject(crs=\"EPSG:4277\", scale=10)\n",
-    "    date = reproj_img.date().format('yyyy-MM-dd').getInfo()\n",
+    "    img = ee.Image(clipmaskCollection.toList(nimg).get(i))\n",
+    "    reproj_img = img.reproject(crs=\"EPSG:27700\", scale=10)\n",
+    "    date = reproj_img.date().format('YYYY-MM-dd').getInfo()\n",
     "\n",
-    "    task = ee.batch.Export.image.toDrive(reproj_img.toFloat(), \n",
-    "                                          #description=date,\n",
-    "                                          folder=f'L1C_Eliburn_{todaydt}',\n",
-    "                                          fileNamePrefix= f\"LIC_Eliburn_{date}\",\n",
-    "                                          crs='EPSG:4277',\n",
-    "                                          #crsTransform=projection['']\n",
+    "    task = ee.batch.Export.image.toDrive(reproj_img.toFloat(),\n",
+    "                                          description=date,\n",
+    "                                          folder=f'L2A_Eliburn_{todaydt}',\n",
+    "                                          fileNamePrefix= f\"L2A_Eliburn_{date}\",\n",
+    "                                          crs='EPSG:27700',\n",
     "                                          region = AOI,\n",
-    "                                          dimensions = (256,256), \n",
-    "                                          # fileFormat = 'TFRecord',\n",
-    "                                          maxPixels = 1e10)\n",
-    "    task.start()"
+    "                                          scale = 10,\n",
+    "                                          fileFormat = 'GeoTIFF',)\n",
+    "    task.start()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +265,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "740baec705b8409b92953d2c512b620f",
+       "model_id": "d8fbe0affa17409292b691af0087f7e4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -276,7 +273,7 @@
        "Map(center=[55.894552363344935, -3.5559986968427935], controls=(WidgetControl(options=['position', 'transparen…"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
